# rag-eval-observe

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  AZURE_DEPLOY.md  AZURE_TAGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONNECT_VERCEL_AZURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  ENV_VARS.md  FIND_AZURE_URL.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TEST_BACKEND.md  config.ts  coverage.json  deploy-azure-local-build.sh  deploy-azure.sh  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  setup-azure-db.sh  tailwind.config.js  tsconfig.json  vercel.json
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/api/routes/: __init__.py  analytics.py  chat.py  documents.py  eval.py  health.py  ingest.py  metrics.py  query.py  search.py
backend/app/core/: config.py  logging.py  metrics.py  rate_limit.py  rate_limit_redis.py  tracing.py
backend/app/db/: analytics_queries.py  chat_queries.py  eval_queries.py  queries.py  session.py
backend/app/llm/: base.py  openai_client.py
backend/app/rag/: adaptive_chunking.py  answer.py  chunking.py  ingest.py  preprocess.py  retrieval_strategies.py  retrieve.py  types.py
backend/eval/: .env.example  baseline.json  benchmark_results.json  benchmark_strategies.py  compare_eval.py  dataset.jsonl  report.md  run_eval.py
backend/eval/case_study/: README.md  clean.summary.json  comment.md  regressed.summary.json  reproduce.sh
backend/eval/case_study/distractors/: embeddings-overview.md  evaluation-metrics-glossary.md  retrieval-methods-glossary.md  vector-index-cheatsheet.md
backend/migrations/: README.md  env.py
backend/migrations/versions/: 001_baseline.py  002_documents_source_title_idx.py  003_document_original_binary.py  004_chat_history.py  005_chat_message_observability.py  006_eval_runs.py
backend/scripts/: apply_init_sql.py  seed_eval_corpus.py
backend/tests/: conftest.py  test_adaptive_chunking.py  test_analytics_api.py  test_answer.py  test_chat_history_api.py  test_chunking.py  test_eval_compare.py  test_eval_judge_parsing.py  test_eval_runs_api.py  test_health.py  test_ingest_integration.py  test_metrics_observability.py  test_openai_client.py  test_preprocess.py  test_production_hardening.py  test_query_log_detail_api.py  test_query_logs_list_api.py  test_query_stream.py  test_rate_limit_redis.py  test_retrieval_strategies.py  test_retrieve.py
db/: index.ts
docs/: API_CONTRACT.md  AZURE_DEPLOY.md  BENCHMARKS.md  DEPLOYMENT.md  DEVELOPMENT.md  EVAL_CI.md  HARDENING.md  OBSERVABILITY.md  README.md  RUNBOOK.md  SLOS.md  THESIS.md  THREAT_MODEL.md
e2e/: a11y-core-pages.spec.ts  chat-mocked.spec.ts  chat-persistence.spec.ts  demo-automated.spec.ts  eval-observability-mocked.spec.ts  eval-regression-capture.spec.ts  helpers.ts  ingest-mocked.spec.ts  readme-demo-capture.spec.ts  smoke.spec.ts
eval/: run.ts
observability/: grafana-rag-eval-prometheus.json  grafana-rag-eval-traces.json  logging.ts  metrics.ts
scripts/: capture-live.mjs  capture-regression.sh  cleanup-documents.ts  coverage-badge.mjs  ingest-sample-docs.ts  list-documents.ts  make-regression-gif.sh  render-og.mjs  stitch-demo-gif.sh
src/: middleware.ts
tests/: demo-example-queries.test.ts  errors.test.ts  eval-compare-view.test.tsx  eval-compare.test.ts  eval-export.test.ts  eval-harness.test.ts  fetch-error.test.ts  ingest-format.test.ts  inline-citations.test.tsx  message-citations.test.tsx  (+4 more)
(+230 files in other folders)
