[project]
name = "rag-eval-backend"
version = "1.0.0"
description = "FastAPI backend for RAG evaluation and observability"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
]
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, N pep8-naming, UP pyupgrade,
# B flake8-bugbear (real-bug patterns), C4 flake8-comprehensions,
# ASYNC flake8-async (blocking calls in async defs), S flake8-bandit (security).
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ASYNC", "S"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection defaults (Query/Path/File/Depends/...) are
# call-in-default by design, not the B008 foot-gun the rule targets.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Depends",
    "fastapi.Cookie",
]

[tool.ruff.lint.per-file-ignores]
# Asserts are the idiom under test; bandit's S101 is noise there.
"tests/**" = ["S101"]
# S608 flags the dynamic-SQL f-strings in the hybrid retriever, but every
# interpolated fragment is a $N placeholder or static SQL — all user values are
# bound as asyncpg parameters (vector_params / bm25_params), so there is no
# injection surface. noqa can't sit on a triple-quoted opening line, hence here.
"app/rag/retrieval_strategies.py" = ["S608"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
